--- a/hw3/index.html
+++ b/hw3/index.html
@@ -57,8 +57,32 @@
 		<br>
 		
 		<h3><b>Part 3: Direct Illumination</b></h3>
-		<p style="color: #DBDEE1; width: 100%">hi</p>
-		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task1/task1/spheres.png" alt="2">
+		<p style="color: #DBDEE1; width: 100%">To implement the hemisphere variation for direct lighting, we simply calculated num_samples rays and then returned the average of them. To actually calculate these rays though, first we had to convert wi to world space, after which we could create a ray from hit_p to the world version of wi. Now, we had to call the intersect function on this ray. On the case of an intersection, we then added $$\text{emission}_{\text{BSDF}}\cdot f(w_{\text{out}}, wi)\cdot wi_z \cdot p$$ where p is the value we are normalizing to in the hemisphere. Also, at this point, $f$ simply returns $\frac{\text{reflectance}}{\pi}$ because we only have one type of BSDF. Unfortunately, on this part, we had a very strange bug that we were stuck on for hours. Even more unfortunate for us, it turned out to not be in this part at all, but was actually a small bug with the implementation of Part 2. </p>
+		<p style="color: #DBDEE1; width: 100%">Importance sampling was a bit more difficult to implement, as we had to sample from each of the lights instead of in a hemisphere. So, we created a for loop that iterates through each light in scene->lights. Inside of this,  we first check if the light is a delta light (in this assignment it is not), and if it isn’t, we just set our iterations to the variable ns_area_light.</p>
+		<p style="color: #DBDEE1; width: 100%">Inside the inner loop (goes for ns_area_light iterations,) we must call sample_L() with the appropriate parameters, and then create a ray with hit_p and wi (We make sure that its min_t and max_t are exactly EPS_F off the borders.) Finally, if there is no intersection, then we use the formula $$f(w_{\text{out}}, wi)\cdot l \cdot  \frac{\text{wi} \bullet n}{\text{PDF}}$$ where $l$ is the return value of sample_L(), and PDF is the pdf attribute of sample_L() to calculate the value at that point, which we then add to our total light sum. We then return that value divided by the total number of iterations.</p>
+		<p style="color: #DBDEE1; width: 100%">We can now see some results of the two algorithms. (Hemisphere; top, importance; bottom.)</p>
+		<div class="row">
+  			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task1/task1/lucy.png" alt="0">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task1/task1/cow.png" alt="1">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task1/task1/spheres.png" alt="2">
+			</div>
+		</div>
+		<div class="row">
+  			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task1/task1/lucy.png" alt="0">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task1/task1/cow.png" alt="1">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task1/task1/spheres.png" alt="2">
+			</div>
+		</div>
 		<br>
 		<br>
 		
