--- a/hw3/index.html
+++ b/hw3/index.html
@@ -113,7 +113,7 @@
 		<br>
 		
 		<h3><b>Part 4: Global Illumination</b></h3>
-		<p style="color: #DBDEE1; width: 100%">Here are a few scenes rendered with global illumination with 1024 samples:</p>
+		<p style="color: #DBDEE1; width: 100%">Our indirect lighting function is just an extension of our direct lighting function. To get indirect lighting, instead of starting a ray from the camera, we pretend that we started the ray from a point on the mesh. Then, we sample a bunch of outgoing rays given by a predetermined quantity, and get the lighting from there, and dimming it based on the distance traveled. Furthermore, we call the function recursively based on the number of bounces we want, such that we get indirect indirect lighting and so on. Finally, we add up all the lighting from all our bounces and return the L_out as at_least_one_bounce_illumination. Here are a few scenes rendered with global illumination with 1024 samples:</p>
 		<div class="row">
   			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task4/pt1_gbl_bench.png" alt="0">
@@ -157,7 +157,7 @@
 		<br>
 		
 		<h3><b>Part 5: Adaptive Sampling</b></h3>
-		<p style="color: #DBDEE1; width: 100%">Below are images of cow.dae before and after some edge splits and edge splits and flips: </p>
+		<p style="color: #DBDEE1; width: 100%">Adaptive sampling is simply checking that the illumination in our pixel has converged after repeated samples. What adaptive sampling allows us to do is take our data (mean and variance) and check whether our data has converged by checking whether the standard deviation over the number of samples times a 95% confidence interval is below our mean times a small constant which is our convergence threshold. If our data falls below the threshold, the data has converged. Unfortunately, if our threshold is too high or our batch size for convergence checks is too low, we can end up with data that looks like it has converged due to a low probability, without actually converging, resulting in aliasing in the form of out of place pixels. </p>
 		<div class="row">
 			<div class="column">
 			  <img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task1/task1/spheres.png" alt="2">
