--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</center>
 		<br>
 		<h3><b>Homework 1 - Rasterizer</b></h3>
-		Homework 1 description here.
+		<p style="color: #DBDEE1; width: 100%">Homework 1 description here.</p>
 		<a href="/hw1/index.html"><b>Homework 1 - Rasterizer</b></a>
 		<br><br><br>
 		<h3><b>Homework 2 - Meshes</b></h3>
