--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 		<p style="color: #DBDEE1; width: 100%">Now, armed with our ability to quickly render scenes, we took on Part III. Most of the tasks could be implemented using formulas from the lecture slides, but this part turned out to be a little more than we bargained for, as it took us much longer than expected. We had trouble finding a bug within the section, which ended up making sense, since it wasn’t in that task the whole time. A bug in the collisions in Part II had caused us all the issues in Part III. Lesson learned: Always check old code. Other than that, this section was quite interesting once we got it working, because we finally got to see the shadows on the bunny and the floor.</p>
 		<p style="color: #DBDEE1; width: 100%">Part IV produced some stunning images that surpassed our expectations. With only writing one other recursive function, we were able to expand the number of light bounces, creating the delightful, soft look of global illumination. We were also able to see exactly how increasing the number of light bounces affected the image.</p>
 		<p style="color: #DBDEE1; width: 100%">Part V was also pretty neat, since it enabled us to see how adaptive sampling actually rendered the image. We simply had to write a new function to count how many samples the est_radiance_global_illumination() function returned. It was nice to see a visual representation of what we already assumed to be true: The areas in more shadow take longer to converge, and the ones in light converge quicker. </p>
-		<a href="/hw3/index.html">><b>Homework 3 - Pathtracer</b>r</a>
+		<a href="/hw3/index.html"><b>Homework 3 - Pathtracer</b></a>
 		<br><br><br>
 		<h3><b>Homework 4 - Unknown</b></h3>
 		<p style="color: #DBDEE1; width: 100%">Homework 2 was all about geometric modeling. In Part I, we first started with drawing curves using control points using de Casteljau subdivision. Using this abstraction, we increased our dimensionality to surfaces in order to render full .bez files. </p>
-		<a href="/hw4/index.html">><b>Homework 4 - Unknown</b></a>
+		<a href="/hw4/index.html"><b>Homework 4 - Unknown</b></a>
 	</body>
 	<script>
 		var links = document.body.getElementsByTagName("a")
