--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<p style="color: #DBDEE1; width: 100%">Part V was also pretty neat, since it enabled us to see how adaptive sampling actually rendered the image. We simply had to write a new function to count how many samples the est_radiance_global_illumination() function returned. It was nice to see a visual representation of what we already assumed to be true: The areas in more shadow take longer to converge, and the ones in light converge quicker. </p>
 		<a href="/hw3/index.html"><b>Homework 3 - Pathtracer</b></a>
 		<br><br><br>
-		<h3><b>Homework 4 - Cloth Simu</b></h3>
+		<h3><b>Homework 4 - Cloth Sim</b></h3>
 		<p style="color: #DBDEE1; width: 100%">Cloth Sim description here.</p>
 		<a href="/hw4/index.html"><b>Homework 4 - Unknown</b></a>
 	</body>
