--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<br><br><br>
 		<h3><b>Homework 4 - Cloth Sim</b></h3>
 		<p style="color: #DBDEE1; width: 100%">Cloth Sim description here.</p>
-		<a href="/hw4/index.html"><b>Homework 4 - Unknown</b></a>
+		<a href="/hw4/index.html"><b>Homework 4 - Cloth Sim</b></a>
 	</body>
 	<script>
 		var links = document.body.getElementsByTagName("a")
